fixed_issues